# buying_winners_iter3

./: .gitignore  AGENTS.md  cli_interface.md  code_review.txt  m_1.md  m_10.md  m_2.md  m_3.md  m_4.md  m_4_review.md  m_5.md  m_5_review.md  m_6.md  m_7.md  m_9.md  momentum_TRD.md  prompt.md  pyproject.toml  temp_patch.diff
config/: data.yml
scripts/: compute_cv.py  compute_metrics.py  compute_momentum.py  compute_portfolio.py  compute_robustness.py  log_experiment.py  make_clean.py  make_report.py  make_returns.py  make_universe.py  run_backtest.py  run_single.py
src/: backtest.py  calendar.py  costs.py  cv.py  data_io.py  experiment_tracking.py  filters.py  metrics.py  momentum.py  portfolio.py  reports.py  returns.py  robustness.py  stats.py  utils.py
tests/: test_backtest.py  test_calendar_utils.py  test_config.py  test_costs.py  test_cv.py  test_data_io.py  test_filters.py  test_index_loader.py  test_metrics.py  test_momentum.py  test_portfolio.py  test_reports.py  test_repro.py  test_returns.py  test_robustness.py  test_stats.py  test_validation.py
